# vibezork.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  CONVERSION_PLAN.md  DEVELOPER_GUIDE.md  PROJECT_STATUS.md  README.md  REORGANIZATION.md  TEXT_FIDELITY_AUDIT.md  audit_text_fidelity.sh  comprehensive_checklist.md  filter_scan.py  test.sav  test_read_verb.cpp  zil_actions.md  zil_objects_data.txt  zil_systems.md  zil_systems_data.txt
.cache/clangd/index/: action_tests.cpp.EF890F554C9DCCB1.idx  actions.cpp.8457D1D0FD01FEDC.idx  actions_group_a.cpp.49D91A86871566AC.idx  basic_tests.cpp.4054090CB97BD856.idx  candle.cpp.CFDA1CD301B02E4C.idx  candle.h.E5965B97FABB5248.idx  combat.cpp.9C7B31498BA3604D.idx  combat.h.3EE87104EA472EC7.idx  combat_system_tests.cpp.331C062F55BFD887.idx  combat_verb_tests.cpp.8DDECE7D6EC5EE7D.idx  complex_syntax_attack_tests.cpp.34348064226840B1.idx  complex_syntax_give_tests.cpp.F1313DBEC7394672.idx  complex_syntax_take_tests.cpp.B52FEF59E009203F.idx  complex_syntax_tests.cpp.787A9C3607AA111B.idx  complex_syntax_unlock_tests.cpp.A31730316E6101AC.idx  consumables.cpp.D2B375623FCE6693.idx  consumption_verb_tests.cpp.5ABC8ED3C6C46ECD.idx  containers.cpp.2D207EC2AFA47DD8.idx  containers_simple.cpp.F6FC85D1AB9F006F.idx  critical_puzzles_tests.cpp.34C4686509C64C56.idx  death.cpp.703107FE19090198.idx  death.h.79BAB006E95DE985.idx  death_system_tests.cpp.2453588D7F0FCD6F.idx  diagnose_test.cpp.33B9A6625EAC2A83.idx  examination_verb_tests.cpp.6D4178D65D92EB27.idx  flags.h.A8F2CC6BAE737E5F.idx  game_command_tests.cpp.EC15BBA0122CA614.idx  global_actions.cpp.C8751A8E3C651E3B.idx  globals.cpp.1C4E061F1AA7531E.idx  globals.h.4EF3C488A033234C.idx  integration_tests.cpp.E731EA52A3101035.idx  interaction_verb_tests.cpp.C90D7562B7724FB3.idx  inventory_tests.cpp.7CF8201D64A6C4B2.idx  io.cpp.4A90BE57A5290B95.idx  io.h.7215B57522B4DAFC.idx  items_simple.cpp.97A5D81C9F7E7EB7.idx  lamp.cpp.443C94F9D1727FF0.idx  lamp.h.4E6B61DA8702F71B.idx  light.cpp.4A0C760D3604D091.idx  light.h.C5728E5C5C2E94BC.idx  (+75 more)
.kiro/specs/: zork-port-old.md
.kiro/specs/zork-complete-port/: README.md  design.md  requirements.md  tasks.md
.kiro/steering/: cpp-modern-features.md  git-workflow.md
docs/: DEMO.md  PROJECT_STATUS.md  TIMER_SYSTEM.md  comprehensive_checklist.md  gap_analysis.py  scan_zil.py  zil_actions.md  zil_rooms_data.txt  zil_verbs.md
src/: main.cpp
src/core/: flags.h  globals.cpp  globals.h  io.cpp  io.h  object.cpp  object.h  types.h
src/parser/: parser.cpp  parser.h  parser_instance.cpp  syntax.cpp  syntax.h  verb_registry.cpp  verb_registry.h
src/systems/: candle.cpp  candle.h  combat.cpp  combat.h  death.cpp  death.h  lamp.cpp  lamp.h  light.cpp  light.h  npc.cpp  npc.h  save.cpp  save.h  score.cpp  score.h  sword.cpp  sword.h  timer.cpp  timer.h
src/verbs/: verbs.cpp  verbs.h
src/world/: actions.cpp  actions_group_a.cpp  containers_simple.cpp  global_actions.cpp  items_simple.cpp  missing_objects.cpp  npcs.cpp  object_builder.h  objects.h  readables.cpp  room_builder.h  rooms.cpp  rooms.h  rooms_exterior.cpp  rooms_house.cpp  rooms_maze.cpp  rooms_river.cpp  rooms_special.cpp  rooms_underground.cpp  scenery.cpp  scenery_simple.cpp  treasures.cpp  vehicles.cpp  world.cpp  world.h  world_init.cpp  world_objects.h
src/world/refactored/: INTEGRATION_PLAN.md  consumables.cpp  containers.cpp  npcs.cpp  object_builder.h  player.cpp  room_builder.h  rooms_mine.cpp  rooms_special.cpp  rooms_underground.cpp  scenery.cpp  special_objects.cpp  tools.cpp  treasures.cpp  world_objects.h
tests/: README.md  TRANSCRIPT_EXTRACTION.md  action_tests.cpp  basic_tests.cpp  combat_system_tests.cpp  combat_verb_tests.cpp  complex_syntax_attack_tests.cpp  complex_syntax_give_tests.cpp  complex_syntax_take_tests.cpp  complex_syntax_tests.cpp  complex_syntax_unlock_tests.cpp  consumption_verb_tests.cpp  critical_puzzles_tests.cpp  death_system_tests.cpp  diagnose_test.cpp  examination_verb_tests.cpp  game_command_tests.cpp  game_tester.h  integration_tests.cpp  interaction_verb_tests.cpp  inventory_tests.cpp  light_system_tests.cpp  light_verb_tests.cpp  manipulation_verb_tests.cpp  meta_game_additional_tests.cpp  meta_game_verb_tests.cpp  object_system_tests.cpp  painting_tests.cpp  parser_comprehensive_tests.cpp  parser_flag_tests.cpp  performance_tests.cpp  putty_tests.cpp  puzzle_solvability_tests.cpp  rainbow_tests.cpp  rboat_tests.cpp  room_navigation_tests.cpp  save_system_tests.cpp  score_system_tests.cpp  special_action_verb_tests.cpp  sword_glow_tests.cpp  (+10 more)
